# pgmcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  agentdb-product-plan.md  deny.toml  docker-compose.yml  pgmcp-engineering-scope.md
.github/workflows/: ci.yml  release.yml
benches/: connection.rs  serialization.rs  streaming.rs
config/: pgmcp.example.toml
demo/: README.md  seed.sql
docs/plans/: 2026-04-07-pgmcp-master-plan.md  2026-04-07-phase-1-foundation.md  2026-04-07-phase-2-connectivity.md  2026-04-07-phase-3-discovery.md  2026-04-07-phase-4-schema-cache.md  2026-04-07-phase-5-sql-analysis.md  2026-04-07-phase-6-query-tool.md  2026-04-07-phase-7-intelligence.md
docs/specs/: 2026-04-07-pgmcp-mvp-design.md
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/pg/: cache.rs  infer.rs  invalidation.rs  mod.rs  pool.rs  types.rs
src/pg/queries/: describe_table.sql  list_databases.sql  list_enums.sql  list_extensions.sql  list_schemas.sql  list_tables.sql  my_permissions.sql  server_settings.sql  table_stats.sql
src/server/: context.rs  mod.rs  router.rs  tool_defs.rs
src/sql/: guardrails.rs  limit.rs  mod.rs  parser.rs
src/streaming/: csv.rs  json.rs  mod.rs
src/tools/: connection_info.rs  describe_table.rs  explain.rs  health.rs  list_databases.rs  list_enums.rs  list_extensions.rs  list_schemas.rs  list_tables.rs  mod.rs  my_permissions.rs  propose_migration.rs  query.rs  query_events.rs  server_info.rs  suggest_index.rs  table_stats.rs
src/transport/: mod.rs  sse.rs  stdio.rs
tests/: discovery.rs  dispatcher.rs  error_coverage.rs  explain.rs  guardrails.rs  health.rs  mcp_protocol.rs  migration.rs  permissions.rs  query.rs  schema_cache.rs  streaming.rs  suggest_index.rs
tests/common/: fixtures.rs  mod.rs
